WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268810
[LBSE] Fix svg/custom/use-nested-symbol-viewport.html
https://bugs.webkit.org/show_bug.cgi?id=268810
Summary
[LBSE] Fix svg/custom/use-nested-symbol-viewport.html
Rob Buis
Reported
2024-02-06 01:32:22 PST
Fix svg/custom/use-nested-symbol-viewport.html.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-02-06 01:35:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23908
EWS
Comment 2
2024-02-06 03:18:37 PST
Committed
274138@main
(4633ac0a7a7c): <
https://commits.webkit.org/274138@main
> Reviewed commits have been landed. Closing PR #23908 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-06 03:20:14 PST
<
rdar://problem/122377678
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug