[LBSE] Fix svg/custom/use-nested-symbol-viewport.html https://bugs.webkit.org/show_bug.cgi?id=268810

Reviewed by Nikolas Zimmermann.

Percentages needs to be resolved in the generated svg context, not the original use context.

* LayoutTests/platform/mac-sonoma-wk2-lbse-text/TestExpectations:
* Source/WebCore/rendering/svg/RenderSVGTransformableContainer.cpp:
(WebCore::RenderSVGTransformableContainer::additionalContainerTranslation const):

Canonical link: https://commits.webkit.org/274138@main